// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`findsertReviewPeerGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-first-call 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/.reviews/peer/.gitignore",
}
`;

exports[`findsertReviewPeerGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-second-call 1`] = `
{
  "action": "unchanged",
  "pathRelative": "$ROUTE/.reviews/peer/.gitignore",
}
`;

exports[`findsertReviewPeerGitignore.integration given: [case1] called multiple times when: [t0] findsert is called multiple times then: only creates once, subsequent calls return unchanged: result-third-call 1`] = `
{
  "action": "unchanged",
  "pathRelative": "$ROUTE/.reviews/peer/.gitignore",
}
`;

exports[`findsertReviewPeerGitignore.integration given: [case2] peer-review files in directory when: [t0] findsert is called with peer-review files present then: gitignore created alongside peer-review files: result-with-files-present 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/.reviews/peer/.gitignore",
}
`;

exports[`findsertReviewPeerGitignore.integration given: [case3] route is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-route 1`] = `"ENOTDIR: not a directory, mkdir '<route>/route-as-file/.reviews/peer'"`;

exports[`findsertReviewPeerGitignore.integration given: [case4] invalid route path when: [t0] findsert is called with non-writable path then: throws permission error: error-eacces 1`] = `[Error: EACCES: permission denied, mkdir '/nonexistent']`;

exports[`findsertReviewPeerGitignore.integration given: [case5] .gitignore present with incorrect content when: [t0] findsert is called then: overwrites with correct content: result-overwrite 1`] = `
{
  "action": "created",
  "pathRelative": "$ROUTE/.reviews/peer/.gitignore",
}
`;

exports[`findsertReviewPeerGitignore.integration given: [case6] .gitignore is a directory when: [t0] findsert is called then: throws EISDIR error: error-eisdir 1`] = `[Error: EISDIR: illegal operation on a directory, read]`;

exports[`findsertReviewPeerGitignore.integration given: [case7] .reviews path is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-reviews 1`] = `"ENOTDIR: not a directory, mkdir '<route>/.reviews/peer'"`;

exports[`findsertReviewPeerGitignore.integration given: [case8] peer path is a file instead of directory when: [t0] findsert is called then: throws ENOTDIR error: error-enotdir-peer 1`] = `"EEXIST: file already exists, mkdir '<route>/.reviews/peer'"`;
